--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 	</div>
 </div>
 
+
+
+
+
+
 <!-- three collumns and 2 rows -->
 
 <div class="grid threecolumn">
@@ -85,8 +90,8 @@
 			<div class="project6">
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
-				  	<h1>Campaign Branding</h1>
-					<h2>ILLUSTRATION | SYSTEMS</h2>
+				  	<h1>See Her Excel Scholarship</h1>
+					<h2>CAMPAIGN | VISUAL NARRATIVE</h2>
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Branding">
