--- a/mediakit.html
+++ b/mediakit.html
@@ -37,8 +37,11 @@
 			<div class="projectdescription">
 				<h2>MEDIA KIT | ADVERTISING | PUBLIC RELATIONS</h2>
 				<h1>Fine Cooking Media Kit</h1>
-				<p>While working at Taunton Press, a publisher with five unique lifestyle brands, I was tasked to work with copywriters and each brand’s marketing team to compile similar sets of information to create media kits for 2016. The slideshow below contains selected pages of Fine Cooking’s media kit each created with stylized rules and branded photography.
-</p>
+				<p><b>The Request:</b> Develop a .pdf that can be shown as a whole or indivudal sheets that can be used as a public reltions tool while representative of the Fine Cooking brand.
+				<br><br>
+				<b>The Process:</b> Paired with stakeholders within copy and marketing teams to assemble information on the brand's mission statement, editorial content, mechanical specifications, reader, demographics, circulation, distrubution, and more.
+				<br><br>
+				<b>The Visuals:</b> Developed a cohesive layout reflecting Fine Cooking's style, incorporating photography and featured spreads representative of the brand's past year. </p>
 			</div>
 		</div>
 </div>
@@ -81,8 +84,8 @@
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
-					<h1>Email Template Designs</h1>
-					<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
+					<h1>Email Design</h1>
+					<h2>RESPONSIVE LAYOUT | SKETCH</h2>
 				  	</div>
 				</a>
 				<img src="img/EmailTumbnail_.gif" title="Sweepstakes">
@@ -92,7 +95,7 @@
 			<div class="project2">
 				<a class="overlay" href="sweepstakes.html">
 				  <div class="overlay-text">
-					<h1>Art Direction</h1>
+					<h1>Studio Photography and Art Direction</h1>
 					<h2>STUDIO PHOTOGRAPHY | EDITING | ASSET PRODUCTION</h2>
 				  	</div>
 				</a>
@@ -103,8 +106,8 @@
 			<div class="project3">
 				<a class="overlay" href="advertising.html">
 				  <div class="overlay-text">
-				  	<h1>Marketing Collateral / Advertising</h1>
-					<h2>PROSPECTING & REMARKETING DISPLAY | PRINT ADS | FACEBOOK ADS | AFFILIATE ADS</h2>
+				  	<h1>Marketing Collateral and Advertising</h1>
+					<h2>BANNER ADS | PRINT ADS | FACEBOOK ADS </h2>
 				  	</div>
 				</a>
 				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
@@ -128,8 +131,8 @@
 			<div class="project5">
 				<a class="overlay" href="photomanipulation.html">
 				  <div class="overlay-text">
-				  	<h1>Photography Manipulation</h1>
-					<h2>PHOTO EDITING | PERSONAL PROJECTS</h2>
+				  	<h1>Personal Projects</h1>
+					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
 				  	</div>
 				</a>
 				<img src="img/project5_homepage.png" title="Photo Manipulations">
@@ -139,14 +142,16 @@
 			<div class="project6">
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
-				  	<h1>Branding</h1>
-					<h2>ILLUSTRATION | SYSTEMS</h2>
+				  	<h1>See Her Excel Scholarship</h1>
+					<h2>CAMPAIGN | VISUAL NARRATIVE</h2>
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Branding">
 			</div>
 		</div>
 </div>
+
+
 
 
 <!-- footer -->
