--- a/advertising.html
+++ b/advertising.html
@@ -22,6 +22,7 @@
 
 <!-- body contents -->
 
+
 <div class="grid head">
 		<div class="col-1-1">
 			<div class="project3header">
@@ -29,6 +30,7 @@
 			</div>
 		</div>
 </div>
+
 
 <div class="grid head">
 		<div class="col-1-1">
@@ -38,6 +40,31 @@
 				<p></p>
 			</div>
 		</div>
+</div>
+
+
+<div class="grid manipulation">
+	<div class="col-1-1">
+		<div class="col-2-3">
+			<div class="project1">
+				<a href="img/VoteSticker_InstagramandMockup.gif" target="_blank"> 
+				<img src="img/VoteSticker_InstagramandMockup.gif">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<p> This is some type. </p>
+			</div>
+		</div>
+		<div class="col-2-3">
+			<div class="project1">
+				<a href="img/GAScholarship_LandingPage.gif" target="_blank">
+				<img src="img/GAScholarship_LandingPage.gif">
+				</a>
+			</div>
+		</div>
+	</div>
 </div>
 
 
@@ -56,8 +83,8 @@
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
-					<h1>Email Template Designs</h1>
-					<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
+					<h1>Email Design</h1>
+					<h2>RESPONSIVE LAYOUT | SKETCH</h2>
 				  	</div>
 				</a>
 				<img src="img/EmailTumbnail_.gif" title="Sweepstakes">
@@ -67,7 +94,7 @@
 			<div class="project2">
 				<a class="overlay" href="sweepstakes.html">
 				  <div class="overlay-text">
-					<h1>Art Direction</h1>
+					<h1>Studio Photography and Art Direction</h1>
 					<h2>STUDIO PHOTOGRAPHY | EDITING | ASSET PRODUCTION</h2>
 				  	</div>
 				</a>
@@ -78,8 +105,8 @@
 			<div class="project3">
 				<a class="overlay" href="advertising.html">
 				  <div class="overlay-text">
-				  	<h1>Marketing Collateral / Advertising</h1>
-					<h2>PROSPECTING & REMARKETING DISPLAY | PRINT ADS | FACEBOOK ADS | AFFILIATE ADS</h2>
+				  	<h1>Marketing Collateral and Advertising</h1>
+					<h2>BANNER ADS | PRINT ADS | FACEBOOK ADS </h2>
 				  	</div>
 				</a>
 				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
@@ -103,8 +130,8 @@
 			<div class="project5">
 				<a class="overlay" href="photomanipulation.html">
 				  <div class="overlay-text">
-				  	<h1>Photography Manipulation</h1>
-					<h2>PHOTO EDITING | PERSONAL PROJECTS</h2>
+				  	<h1>Personal Projects</h1>
+					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
 				  	</div>
 				</a>
 				<img src="img/project5_homepage.png" title="Photo Manipulations">
@@ -114,8 +141,8 @@
 			<div class="project6">
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
-				  	<h1>Branding</h1>
-					<h2>ILLUSTRATION | SYSTEMS</h2>
+				  	<h1>See Her Excel Scholarship</h1>
+					<h2>CAMPAIGN | VISUAL NARRATIVE</h2>
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Branding">
