--- a/emaildesigns.html
+++ b/emaildesigns.html
@@ -34,7 +34,11 @@
 		<div class="projectdescription">
 			<h2>RESPONSIVE LAYOUT | SKETCH</h2>
 			<h1>Email Design</h1>
-			<p>Working closely with the email team's front-end developer: I redesigned, reimagined, and streamlined GA's email style into a clean simplified template that allowed for flexibility in the channel's needs. The design is based on modules, each section of the email is created to be re-organized depending on sections needed in the email send. </p>
+				<p><b>The Request:</b> Update General Assembly's branded emails to current visual standards while improving conversion through user experience.
+				<br><br>
+				<b>The Process:</b> Working closely with the email team's front-end developer: I redesigned, reimagined, and streamlined GA's email style into a clean simplified template that allowed for flexibility in the channel's needs. With working html and css knowledge, the developer and myself worked through creating edits in real time. 
+				<br><br>
+				<b>The Design:</b> Based on modules, each section of the email is created to be re-organized depending on sections desired for each email send. </p>
 		</div>
 	</div>
 </div>
@@ -59,8 +63,8 @@
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
-					<h1>Email Template Designs</h1>
-					<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
+					<h1>Email Design</h1>
+					<h2>RESPONSIVE LAYOUT | SKETCH</h2>
 				  	</div>
 				</a>
 				<img src="img/EmailTumbnail_.gif" title="Sweepstakes">
@@ -70,7 +74,7 @@
 			<div class="project2">
 				<a class="overlay" href="sweepstakes.html">
 				  <div class="overlay-text">
-					<h1>Art Direction</h1>
+					<h1>Studio Photography and Art Direction</h1>
 					<h2>STUDIO PHOTOGRAPHY | EDITING | ASSET PRODUCTION</h2>
 				  	</div>
 				</a>
@@ -81,8 +85,8 @@
 			<div class="project3">
 				<a class="overlay" href="advertising.html">
 				  <div class="overlay-text">
-				  	<h1>Marketing Collateral / Advertising</h1>
-					<h2>PROSPECTING & REMARKETING DISPLAY | PRINT ADS | FACEBOOK ADS | AFFILIATE ADS</h2>
+				  	<h1>Marketing Collateral and Advertising</h1>
+					<h2>BANNER ADS | PRINT ADS | FACEBOOK ADS </h2>
 				  	</div>
 				</a>
 				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
@@ -106,8 +110,8 @@
 			<div class="project5">
 				<a class="overlay" href="photomanipulation.html">
 				  <div class="overlay-text">
-				  	<h1>Photography Manipulation</h1>
-					<h2>PHOTO EDITING | PERSONAL PROJECTS</h2>
+				  	<h1>Personal Projects</h1>
+					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
 				  	</div>
 				</a>
 				<img src="img/project5_homepage.png" title="Photo Manipulations">
@@ -117,14 +121,15 @@
 			<div class="project6">
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
-				  	<h1>Branding</h1>
-					<h2>ILLUSTRATION | SYSTEMS</h2>
+				  	<h1>See Her Excel Scholarship</h1>
+					<h2>CAMPAIGN | VISUAL NARRATIVE</h2>
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Branding">
 			</div>
 		</div>
 </div>
+
 
 
 <!-- footer -->
