--- a/photomanipulation.html
+++ b/photomanipulation.html
@@ -156,6 +156,8 @@
 
 <br><br>
 
+
+
 <!-- three collumns and 2 rows -->
 
 <div class="grid threecolumn">
@@ -163,8 +165,8 @@
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
-					<h1>Email Template Designs</h1>
-					<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
+					<h1>Email Design</h1>
+					<h2>RESPONSIVE LAYOUT | SKETCH</h2>
 				  	</div>
 				</a>
 				<img src="img/EmailTumbnail_.gif" title="Sweepstakes">
@@ -174,7 +176,7 @@
 			<div class="project2">
 				<a class="overlay" href="sweepstakes.html">
 				  <div class="overlay-text">
-					<h1>Art Direction</h1>
+					<h1>Studio Photography and Art Direction</h1>
 					<h2>STUDIO PHOTOGRAPHY | EDITING | ASSET PRODUCTION</h2>
 				  	</div>
 				</a>
@@ -185,8 +187,8 @@
 			<div class="project3">
 				<a class="overlay" href="advertising.html">
 				  <div class="overlay-text">
-				  	<h1>Marketing Collateral / Advertising</h1>
-					<h2>PROSPECTING & REMARKETING DISPLAY | PRINT ADS | FACEBOOK ADS | AFFILIATE ADS</h2>
+				  	<h1>Marketing Collateral and Advertising</h1>
+					<h2>BANNER ADS | PRINT ADS | FACEBOOK ADS </h2>
 				  	</div>
 				</a>
 				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
@@ -210,8 +212,8 @@
 			<div class="project5">
 				<a class="overlay" href="photomanipulation.html">
 				  <div class="overlay-text">
-				  	<h1>Photography Manipulation</h1>
-					<h2>PHOTO EDITING | PERSONAL PROJECTS</h2>
+				  	<h1>Personal Projects</h1>
+					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
 				  	</div>
 				</a>
 				<img src="img/project5_homepage.png" title="Photo Manipulations">
@@ -221,14 +223,16 @@
 			<div class="project6">
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
-				  	<h1>Branding</h1>
-					<h2>ILLUSTRATION | SYSTEMS</h2>
+				  	<h1>See Her Excel Scholarship</h1>
+					<h2>CAMPAIGN | VISUAL NARRATIVE</h2>
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Branding">
 			</div>
 		</div>
 </div>
+
+
 
 
 <!-- footer -->
