--- a/printandbrand.html
+++ b/printandbrand.html
@@ -32,9 +32,14 @@
 <div class="grid header1">
 	<div class="col-1-1">
 		<div class="projectdescription">
-			<h2>ILLUSTRATIONS | SYSTEMS</h2>
-			<h1>Branding</h1>
-<!-- 			<p>As General Assembly introduced going through brand shift throughout the company, previous brand guidelines were reevaluated to decide where there was room for change and improvement.</p> -->
+			<h2>CAMPAIGN | VISUAL NARRATIVE</h2>
+			<h1>See Her Excel Scholarship</h1>
+			<p><b>The Request:</b> Create a visual narrative and branding campaign around offering a scholarship to women for long-form tech education courses.
+			<br><br>
+			<b>The Narrative:</b> The See Her Excel (SHE) Scholarship name derived through wanting to encourage propelling women forward and helping them take their first step towards pursuing a career in tech.
+			<br><br>
+			<b>The Visuals:</b> A dynamic collection of historical women pioneers such as Ada Lovelace, Grace Hopper, etc. juxtaposed in a grid with present day students. Together the grid creates cohesion across generations of women making advances and shows the magnitude of collective contribution. 
+			</p>
 		</div>
 	</div>
 </div>
@@ -42,38 +47,18 @@
 
 <div class="grid manipulation">
 	<div class="col-1-1">
-		<div class="col-2-3">
+		<div class="col-1-1">
 			<div class="project1">
-				<a href="img/VoteSticker_InstagramandMockup.gif" target="_blank"> 
-				<img src="img/VoteSticker_InstagramandMockup.gif">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-3">
-			<div class="project1">
-				<p> This is some type. </p>
-			</div>
-		</div>
-		<div class="col-2-3">
-			<div class="project1">
-				<a href="img/GAScholarship_LandingPage.gif" target="_blank">
-				<img src="img/GAScholarship_LandingPage.gif">
+				<a href="img/Q1SHE_OrganicSocial_FacebookTwitter_1200x627.gif" target="_blank"> 
+				<img src="img/Q1SHE_OrganicSocial_FacebookTwitter_1200x627.gif">
 				</a>
 			</div>
 		</div>
 	</div>
 </div>
 
+<br><br><Br>
 
-<!-- <div class="grid header1">
-	<div class="project1body">
-		<div class="col-1-1">
-		<img src="img/VoteSticker_InstagramandMockup.gif">
-		<img src="img/GAScholarship_LandingPage.gif">
-	</div>
-</div> -->
-
-<br>
 
 <!-- three collumns and 2 rows -->
 
@@ -82,8 +67,8 @@
 			<div class="project1">
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
-					<h1>Email Template Designs</h1>
-					<h2>RESPONSIVE LAYOUT DESIGN | SKETCH</h2>
+					<h1>Email Design</h1>
+					<h2>RESPONSIVE LAYOUT | SKETCH</h2>
 				  	</div>
 				</a>
 				<img src="img/EmailTumbnail_.gif" title="Sweepstakes">
@@ -93,7 +78,7 @@
 			<div class="project2">
 				<a class="overlay" href="sweepstakes.html">
 				  <div class="overlay-text">
-					<h1>Art Direction</h1>
+					<h1>Studio Photography and Art Direction</h1>
 					<h2>STUDIO PHOTOGRAPHY | EDITING | ASSET PRODUCTION</h2>
 				  	</div>
 				</a>
@@ -104,8 +89,8 @@
 			<div class="project3">
 				<a class="overlay" href="advertising.html">
 				  <div class="overlay-text">
-				  	<h1>Marketing Collateral / Advertising</h1>
-					<h2>PROSPECTING & REMARKETING DISPLAY | PRINT ADS | FACEBOOK ADS | AFFILIATE ADS</h2>
+				  	<h1>Marketing Collateral and Advertising</h1>
+					<h2>BANNER ADS | PRINT ADS | FACEBOOK ADS </h2>
 				  	</div>
 				</a>
 				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
@@ -129,8 +114,8 @@
 			<div class="project5">
 				<a class="overlay" href="photomanipulation.html">
 				  <div class="overlay-text">
-				  	<h1>Photography Manipulation</h1>
-					<h2>PHOTO EDITING | PERSONAL PROJECTS</h2>
+				  	<h1>Personal Projects</h1>
+					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
 				  	</div>
 				</a>
 				<img src="img/project5_homepage.png" title="Photo Manipulations">
@@ -140,14 +125,16 @@
 			<div class="project6">
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
-				  	<h1>Branding</h1>
-					<h2>ILLUSTRATION | SYSTEMS</h2>
+				  	<h1>See Her Excel Scholarship</h1>
+					<h2>CAMPAIGN | VISUAL NARRATIVE</h2>
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Branding">
 			</div>
 		</div>
 </div>
+
+
 
 
 <!-- footer -->
