--- a/advertising.html
+++ b/advertising.html
@@ -54,7 +54,21 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<p> This is some type. </p>
+				<p>Around the midterm elections early November 2018, I paired and concepted with the social media manager on various social media posts - the goal aimed at engaing General Assembly's community. 
+				<br><br>
+				We decided to create and distrubute variations of 'VOTE' / 'VOTE FOR ____' / 'I VOTED' stickers acorss U.S. campuses that students and faculty could wear and share to spread awareness.  </p>
+			</div>
+		</div>
+			<div class="col-2-3">
+			<div class="project1">
+				<a href="img/IfYoureReadingThisItsNotTooLateToVote_InstagramFB_1080x1080.jpg" target="_blank">
+				<img src="img/IfYoureReadingThisItsNotTooLateToVote_InstagramFB_1080x1080.jpg">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<p>Interested in testing niche content, I created a parody graphic around voting based off of Drake's 'If You're Reading This It's Too Late' album art. This was posted on social media mid-term election day.
 			</div>
 		</div>
 		<div class="col-2-3">
@@ -63,6 +77,50 @@
 				<img src="img/GAScholarship_LandingPage.gif">
 				</a>
 			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<p>
+				<b>The Request:</b> Create a visual narrative and branding around awarding scholarships to two applicants currently out of work.
+				<br><br>
+				<b>The Concept: Wear a New Hat for Your Future in Tech</b> Start fresh with a brand new career in tech, or try your hand at today’s most relevant skills: coding, data, design, marketing, and product development.
+				<br><br>
+				<b>The Design:</b> Visually related trying out a topic of interest to the concept of trying on a new hat, 'stepping into someone else's shoes.'
+			</div>
+		</div>
+		<div class="col-2-3">
+			<div class="project1">
+				<a href="img/SEILaunch_GDNPaid_BuildWebAppsNotWalls_336x280.jpg" target="_blank">
+				<img src="img/SEILaunch_GDNPaid_BuildWebAppsNotWalls_336x280.jpg">
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<p>
+				<b>The Request:</b> Create Google Display Network Banners for promoting a new course offering.
+			</div>
+		</div>
+		<div class="col-2-3">
+				<br>
+				<a href="img/SEILaunch_GDNPaid_BuildWebApps_728x90.jpg" target="_blank">
+				<img src="img/SEILaunch_GDNPaid_BuildWebApps_728x90.jpg">
+			<div class="col-1-2">
+				<br>
+				<a href="img/SEILaunch_GDNPaid_BuildWebApps_300x600.jpg" target="_blank">
+				<img src="img/SEILaunch_GDNPaid_BuildWebApps_300x600.jpg">
+			</div>
+			<div class="col-1-2">
+				<br>
+				<a href="img/SEILaunch_GDNPaid_BuildWebApps_300x200.jpg" target="_blank">
+				<img src="img/SEILaunch_GDNPaid_BuildWebApps_300x200.jpg">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<p>
+<!-- 				<b>The Request:</b> Empty copy
+ -->			</div>
 		</div>
 	</div>
 </div>
