--- a/advertising.html
+++ b/advertising.html
@@ -97,7 +97,9 @@
 		<div class="col-1-3">
 			<div class="project1">
 				<p>
-				<b>The Request:</b> Create Google Display Network Banners for promoting a new course offering.
+				<b>The Request:</b> Create Google Display Network Banners for promoting a new course offering. 
+				<br><br>
+				<b>The Design:</b> The following advertisements showcase visual samples of how I would display the same creative concept across these compact banner sizes.
 			</div>
 		</div>
 		<div class="col-2-3">
