--- a/advertising.html
+++ b/advertising.html
@@ -56,7 +56,7 @@
 			<div class="project1">
 				<p>Around the midterm elections early November 2018, I paired and concepted with the social media manager on various social media posts - the goal aimed at engaing General Assembly's community. 
 				<br><br>
-				We decided to create and distrubute variations of 'VOTE' / 'VOTE FOR ____' / 'I VOTED' stickers acorss U.S. campuses that students and faculty could wear and share to spread awareness.  </p>
+				We decided to create and distrubute variations of 'VOTE' / 'I'M VOTING FOR ____' / 'I VOTED' stickers acorss U.S. campuses that students and faculty could wear and share to spread awareness.  </p>
 			</div>
 		</div>
 			<div class="col-2-3">
