--- a/printandbrand.html
+++ b/printandbrand.html
@@ -50,7 +50,43 @@
 		<div class="col-1-1">
 			<div class="project1">
 				<a href="img/Q1SHE_OrganicSocial_FacebookTwitter_1200x627.gif" target="_blank"> 
-				<img src="img/Q1SHE_OrganicSocial_FacebookTwitter_1200x627.gif">
+				<img src="img/Q1SHE_OrganicSocial_FacebookTwitter_1200x627.gif"> </a>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="grid manipulation">
+	<div class="col-1-1">
+		<div class="col-2-3">
+			<div class="project1">
+				<a href="img/SeeHerExcel_Landingpage.png"> 
+				<img src="img/SeeHerExcel_Landingpage.png" target="_blank">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<p><b>See Her Excel: Landing Page</b> Designed the scholarship's landing page pairing with a marketer and copy writer. Created in the platform Unbounce, the page from top to bottom: displays high-level information and a dropdown form, highlights profiles of women in history that tie back to the visual concept, an eye-catching elegibility banner, and descriptions of the courses this scholarship is available for.</p>
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<div class="grid manipulation">
+	<div class="col-1-1">
+		<div class="col-2-3">
+			<div class="project1">
+				<a href="img/SeeHerExcel_Tote.jpg"> 
+				<img src="img/SeeHerExcel_Tote.jpg" target="_blank">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<p><b>See Her Excel: Tote</b> Developed for brand awareness to the campaign.</p>
 				</a>
 			</div>
 		</div>
