--- a/printandbrand.html
+++ b/printandbrand.html
@@ -60,6 +60,25 @@
 	<div class="col-1-1">
 		<div class="col-2-3">
 			<div class="project1">
+				<a href="img/SeeHerExcel_Tote.jpg"> 
+				<img src="img/SeeHerExcel_Tote.jpg" target="_blank">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<p><b>See Her Excel: Tote</b> Developed for brand awareness to the campaign.</p>
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<div class="grid manipulation">
+	<div class="col-1-1">
+		<div class="col-2-3">
+			<div class="project1">
 				<a href="img/SeeHerExcel_Landingpage.png"> 
 				<img src="img/SeeHerExcel_Landingpage.png" target="_blank">
 				</a>
@@ -76,18 +95,42 @@
 
 
 <div class="grid manipulation">
-	<div class="col-1-1">
-		<div class="col-2-3">
+	<div class="col-2-3">
+		<div class="col-1-2">
 			<div class="project1">
-				<a href="img/SeeHerExcel_Tote.jpg"> 
-				<img src="img/SeeHerExcel_Tote.jpg" target="_blank">
+				<a href="img/Q1SHE_GDNAds_V1_300x600.gif"> 
+				<img src="img/Q1SHE_GDNAds_V1_300x600.gif" target="_blank">
 				</a>
 			</div>
 		</div>
-		<div class="col-1-3">
+		<div class="col-1-2">
 			<div class="project1">
-				<p><b>See Her Excel: Tote</b> Developed for brand awareness to the campaign.</p>
+				<a href="img/Q1SHE_GDNAds_V2_300x600.jpg"> 
+				<img src="img/Q1SHE_GDNAds_V2_300x600.jpg" target="_blank">
+			</div>
+		</div>
+	</div>
+	<div class="col-1-3">
+		<div class="project1">
+			<p><b>See Her Excel: Google Display Network Paid Ads</b> Created two sets of scholarship creative to test against eachother. Between the ad on the left (animation of rotating photography, straight forward language) and the ad on the right (colorful eye-catching background, aspirational language demontrating that you could be the next leader in tech with with these skills), the ad on the left performed better. </p>
+			</a>
+		</div>
+	</div>
+</div>
+
+<div class="grid manipulation">
+	<div class="col-2-3">
+		<div class="col-1-2">
+			<div class="project1">
+				<a href="img/Q1SHE_GDNAds_V1_336x280.gif"> 
+				<img src="img/Q1SHE_GDNAds_V1_336x280.gif" target="_blank">
 				</a>
+			</div>
+		</div>
+		<div class="col-1-2">
+			<div class="project1">
+				<a href="img/Q1SHE_GDNAds_V2_336x280.jpg"> 
+				<img src="img/Q1SHE_GDNAds_V2_336x280.jpg" target="_blank">
 			</div>
 		</div>
 	</div>
