--- a/printandbrand.html
+++ b/printandbrand.html
@@ -86,7 +86,7 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<p><b>See Her Excel: Landing Page</b> Designed the scholarship's landing page pairing with a marketer and copy writer. Created in the platform Unbounce, the page from top to bottom: displays high-level information and a dropdown form, highlights profiles of women in history that tie back to the visual concept, an eye-catching elegibility banner, and descriptions of the courses this scholarship is available for.</p>
+				<p><b>See Her Excel: Landing Page</b> Designed the scholarship's landing page pairing with a marketer and copy writer. Created in the platform Unbounce, the page from top to bottom: displays a high-level description of the offer paired with a dropdown lead form, highlights narratives of women featured in visuals of the campaign, an eye-catching elegibility banner, and descriptions of the courses this scholarship is available for.</p>
 				</a>
 			</div>
 		</div>
@@ -112,7 +112,7 @@
 	</div>
 	<div class="col-1-3">
 		<div class="project1">
-			<p><b>See Her Excel: Google Display Network Paid Ads</b> Created two sets of scholarship creative to test against eachother. Between the ad on the left (animation of rotating photography, straight forward language) and the ad on the right (colorful eye-catching background, aspirational language demontrating that you could be the next leader in tech with with these skills), the ad on the left performed better. </p>
+			<p><b>See Her Excel: Google Display Network Paid Ads</b> Created two sets of scholarship creative to test against eachother. Once tested, the winning concept paired with creative between the ad on the left (animation of rotating photography, straight forward language) and the ad on the right (colorful background with aspirational language highlighting YOU could be the next leader in tech by learning these offered skills), the ad on the left performed better. These results could be based on the inclusion of photography of people and the eye-catching rotation of the .gif.</p>
 			</a>
 		</div>
 	</div>
