--- a/photomanipulation.html
+++ b/photomanipulation.html
@@ -35,124 +35,119 @@
 		<div class="projectdescription">
 			<h2>PHOTO EDITING | PERSONAL PROJECTS</h2>
 			<h1>Personal Projects</h1>
-<!-- 			<p>The following two projects have different vibes but share my patience and appreciation for editing photography seamlessly. I am familiar with shooting film and digital photography as well as studio setup and lifestyle photography.</p> -->
+			<p>Various projects I've developed in purpose of creative exploration and discovery. </p>
 		</div>
 	</div>
 </div>
 
-<br><Br><br>
+
 
 <div class="grid manipulation">
 	<div class="col-1-1">
 		<div class="col-1-1">
 			<div class="project1">
-				<a href="amandabjennings.com"> 
+				<a href="img/BlindContourSeries_FrenchieLady.png"> 
 				<img src="img/BlindContourSeries_FrenchieLady.png" target="_blank">
 				</a>
 			</div>
 		</div>
+	</div>
+</div>
+
+<div class="grid manipulation">
+	<div class="col-1-1">
 		<div class="col-1-2">
 			<div class="project1">
-				<a href="amandabjennings.com"> 
+				<a href="img/photomanipulations/chel.jpg"> 
 				<img src="img/photomanipulations/chel.jpg" target="_blank">
 				</a>
 			</div>
 		</div>
 		<div class="col-1-2">
 			<div class="project1">
-				<a href="img/photomanipulations/brad.jpg" target="_blank">
-				<img src="img/photomanipulations/brad.jpg">
+				<a href="img/photomanipulations/brad.jpg"> 
+				<img src="img/photomanipulations/brad.jpg" target="_blank">
+			</div>
+		</div>
+		<div class="col-1-2">
+			<div class="project1">
+				<a href="img/photomanipulations/maria.jpg"> 
+				<img src="img/photomanipulations/maria.jpg" target="_blank">
 				</a>
 			</div>
 		</div>
 		<div class="col-1-2">
 			<div class="project1">
-				<a href="img/photomanipulations/maria.jpg" target="_blank">
-				<img src="img/photomanipulations/maria.jpg">
-				</a>
+				<a href="img/photomanipulations/linds.jpg"> 
+				<img src="img/photomanipulations/linds.jpg" target="_blank">
 			</div>
-		</div>		
+		</div>
 		<div class="col-1-2">
 			<div class="project1">
-				<a href="img/photomanipulations/linds.jpg" target="_blank"> 
-				<img src="img/photomanipulations/linds.jpg">
+				<a href="img/photomanipulations/sara.jpg"> 
+				<img src="img/photomanipulations/sara.jpg" target="_blank">
 				</a>
 			</div>
 		</div>
 		<div class="col-1-2">
 			<div class="project1">
-				<a href="img/photomanipulations/sara.jpg" target="_blank">
-				<img src="img/photomanipulations/sara.jpg">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/photomanipulations/peter.jpg" target="_blank">
-				<img src="img/photomanipulations/peter.jpg">
-				</a>
+				<a href="img/photomanipulations/peter.jpg"> 
+				<img src="img/photomanipulations/peter.jpg" target="_blank">
 			</div>
 		</div>
 	</div>
-<!-- 	<div class="project5header">
-	<div class="col-1-3">
-		<p>These optical illusion portraits were created by masking multiple photographs together to create a unique view. </p>
-	</div>
-	</div> -->
 </div>
 
+<br><br><br>
 
 <div class="grid manipulation">
-	<div class="col-2-3">
+	<div class="col-1-1">
+		<div class="col-2-3">
+			<div class="project1">
+				<a href="img/photomanipulations/twin1.jpg"> 
+				<img src="img/photomanipulations/twin1.jpg" target="_blank">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<p><b>Changing the Past: Twins</b> A series photos from my childhood that I've scanned and manipulated to appear as if I had a twin sister. </p>
+				</a>
+			</div>
+		</div>
+		<div class="col-1-2">
+			<div class="project1">
+				<a href="img/photomanipulations/twin2.jpg"> 
+				<img src="img/photomanipulations/twin2.jpg" target="_blank">
+			</div>
+		</div>
+		<div class="col-1-2">
+			<div class="project1">
+				<a href="img/photomanipulations/twin3.jpg"> 
+				<img src="img/photomanipulations/twin3.jpg" target="_blank">
+				</a>
+			</div>
+		</div>
 		<div class="col-1-1">
 			<div class="project1">
-				<a href="img/photomanipulations/twin1.jpg" target="_blank"> 
-				<img src="img/photomanipulations/twin1.jpg">
-				</a>
-			</div>
-		</div>
-		
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/photomanipulations/twin2.jpg" target="_blank">
-				<img src="img/photomanipulations/twin2.jpg">
+				<a href="img/photomanipulations/twin6.jpg"> 
+				<img src="img/photomanipulations/twin6.jpg" target="_blank">
 				</a>
 			</div>
 		</div>
 		<div class="col-1-2">
 			<div class="project1">
-				<a href="img/photomanipulations/twin3.jpg" target="_blank">
-				<img src="img/photomanipulations/twin3.jpg">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-1">
-			<div class="project1">
-				<a href="img/photomanipulations/twin4.jpg" target="_blank">
-				<img src="img/photomanipulations/twin4.jpg">
-				</a>
+				<a href="img/photomanipulations/twin5.jpg"> 
+				<img src="img/photomanipulations/twin5.jpg" target="_blank">
 			</div>
 		</div>
 		<div class="col-1-2">
 			<div class="project1">
-				<a href="img/photomanipulations/twin6.jpg" target="_blank">
-				<img src="img/photomanipulations/twin6.jpg">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/photomanipulations/twin5.jpg" target="_blank">
-				<img src="img/photomanipulations/twin5.jpg">
-				</a>
+				<a href="img/photomanipulations/twin4.jpg"> 
+				<img src="img/photomanipulations/twin4.jpg" target="_blank">
 			</div>
 		</div>
 	</div>
-<!-- 	<div class="project5header">
-	<div class="col-1-3">
-		<p>This was a project created while I was in my undergrad program that required me to 'change the past'. When I was younger, my mom would always take multipe photographs of the same event to ensure she had a great shot. I chose to scan in these old photographs and mask these images so it appears I had a twin.</p>
-	</div>
-	</div> -->
 </div>
 
 <br><br>
