--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -50,7 +50,7 @@
 				</a>
 			</div>
 		</div>
-		<div class="col-2-3">
+		<div class="col-1-1">
 			<div class="project1">
 				<a href="img/DigitalPrizePack_Email_560x350.gif">
 				<img src="img/DigitalPrizePack_Email_560x350.gif">
@@ -58,6 +58,7 @@
 			</div>
 		</div>
 	</div>
+</div>
 
 
 
