--- a/photomanipulation.html
+++ b/photomanipulation.html
@@ -111,7 +111,7 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<p><b>Changing the Past: Twins</b> A series photos from my childhood that I've scanned and manipulated to appear as if I had a twin sister. </p>
+				<p><b>Changing the Past: Twins</b> A series of photos from my childhood that I've scanned and manipulated to appear as if I had a twin sister. </p>
 				</a>
 			</div>
 		</div>
