--- a/advertising.html
+++ b/advertising.html
@@ -88,41 +88,77 @@
 				<b>The Design:</b> Visually related trying out a topic of interest to the concept of trying on a new hat, 'stepping into someone else's shoes.'
 			</div>
 		</div>
-		<div class="col-2-3">
+	</div>
+</div>
+
+<br><br>
+
+<div class="grid manipulation">
+	<div class="col-2-3">
+		<div class="col-1-2">
 			<div class="project1">
-				<a href="img/SEILaunch_GDNPaid_BuildWebAppsNotWalls_336x280.jpg" target="_blank">
-				<img src="img/SEILaunch_GDNPaid_BuildWebAppsNotWalls_336x280.jpg">
-			</div>
-		</div>
-		<div class="col-1-3">
-			<div class="project1">
-				<p>
-				<b>The Request:</b> Create Google Display Network Banners for promoting a new course offering. 
-				<br><br>
-				<b>The Design:</b> The following advertisements showcase visual samples of how I would display the same creative concept across these compact banner sizes.
-			</div>
-		</div>
-		<div class="col-2-3">
-				<br>
-				<a href="img/SEILaunch_GDNPaid_BuildWebApps_728x90.jpg" target="_blank">
-				<img src="img/SEILaunch_GDNPaid_BuildWebApps_728x90.jpg">
-			<div class="col-1-2">
-				<br>
-				<a href="img/SEILaunch_GDNPaid_BuildWebApps_300x600.jpg" target="_blank">
-				<img src="img/SEILaunch_GDNPaid_BuildWebApps_300x600.jpg">
-			</div>
-			<div class="col-1-2">
-				<br>
-				<a href="img/SEILaunch_GDNPaid_BuildWebApps_300x200.jpg" target="_blank">
-				<img src="img/SEILaunch_GDNPaid_BuildWebApps_300x200.jpg">
+				<a href="img/SEILaunch_GDNPaid_Concept3_A_300x600.jpg"> 
+				<img src="img/SEILaunch_GDNPaid_Concept3_A_300x600.jpg" target="_blank">
 				</a>
 			</div>
 		</div>
-		<div class="col-1-3">
+		<div class="col-1-2">
 			<div class="project1">
-				<p>
-<!-- 				<b>The Request:</b> Empty copy
- -->			</div>
+				<a href="img/SEILaunch_GDNPaid_Concept2_B_300x600.jpg"> 
+				<img src="img/SEILaunch_GDNPaid_Concept2_B_300x600.jpg" target="_blank">
+			</div>
+		</div>
+
+	</div>
+	<div class="col-1-3">
+		<div class="project1">
+			<p><b>Course Specific GDN Ads: Software Engineering launch</b> Pairing with a copywriter, we concepted two variations of creative, each with sets of copy that had variations of plain-spoken and punny.</p>
+			</a>
+		</div>
+	</div>
+</div>
+
+<div class="grid manipulation">
+	<div class="col-2-3">
+		<div class="col-1-2">
+			<div class="project1">
+				<a href="img/SEILaunch_GDNPaid_Concept1_A_336x280.jpg"> 
+				<img src="img/SEILaunch_GDNPaid_Concept1_A_336x280.jpg" target="_blank">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-2">
+			<div class="project1">
+				<a href="img/SEILaunch_GDNPaid_Concept1_B_336x280.jpg"> 
+				<img src="img/SEILaunch_GDNPaid_Concept1_B_336x280.jpg" target="_blank">
+			</div>
+		</div>
+	</div>
+</div>
+
+<br><br>
+
+<div class="grid manipulation">
+	<div class="col-2-3">
+		<div class="col-1-1">
+			<div class="project1">
+				<a href="img/BlackFriday_SocialMedia_instagram.gif"> 
+				<img src="img/BlackFriday_SocialMedia_instagram.gif" target="_blank">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-1">
+			<div class="project1">
+				<a href="img/BlackFriday_SocialMedia_Instagram2.gif"> 
+				<img src="img/BlackFriday_SocialMedia_Instagram2.gif" target="_blank">
+			</div>
+		</div>
+
+	</div>
+	<div class="col-1-3">
+		<div class="project1">
+			<p><b>Black Friday Sale </b> Developed mystery sale creative around a 50% off offering for short-form courses. </p>
+			</a>
 		</div>
 	</div>
 </div>
