--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -35,7 +35,7 @@
 			<div class="projectdescription">
 				<h2>STUDIO PHOTOGRAPHY | EDITING | PRODUCTION</h2>
 				<h1>Photography and Art Direction</h1>
-<!-- 				<p>Photography and art direction details.</p> -->
+				<p> Lead all aspects of in-house photoshoots for marketing brand campaigns. Developed a vision for the look and feel, assembled and directed objects, and edited final photography.
 			</div>
 		</div>
 </div>
