--- a/mediakit.html
+++ b/mediakit.html
@@ -37,9 +37,9 @@
 			<div class="projectdescription">
 				<h2>MEDIA KIT | ADVERTISING | PUBLIC RELATIONS</h2>
 				<h1>Fine Cooking Media Kit</h1>
-				<p><b>The Request:</b> Develop a .pdf that can be shown as a whole or indivudal sheets that can be used as a public reltions tool while representative of the Fine Cooking brand.
+				<p><b>The Request:</b> Develop a .pdf that can be shared as a whole or by indivudal sheets. The media kit pages are intended to be used as readily available one-pagers at conferences or available to be emailed individually. 
 				<br><br>
-				<b>The Process:</b> Paired with stakeholders within copy and marketing teams to assemble information on the brand's mission statement, editorial content, mechanical specifications, reader, demographics, circulation, distrubution, and more.
+				<b>The Process:</b> Paired with stakeholders across copy and marketing teams to assemble information on the brand's mission statement, editorial content, mechanical specifications, reader demographics, circulation, distrubution, and more.
 				<br><br>
 				<b>The Visuals:</b> Developed a cohesive layout reflecting Fine Cooking's style, incorporating photography and featured spreads representative of the brand's past year. </p>
 			</div>
