--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -35,7 +35,7 @@
 			<div class="projectdescription">
 				<h2>STUDIO PHOTOGRAPHY | EDITING | PRODUCTION</h2>
 				<h1>Photography and Art Direction</h1>
-				<p> Lead all aspects of in-house photoshoots for marketing brand campaigns. Developed a vision for the look and feel, assembled and directed objects, and edited final photography.
+				<p> Lead all aspects of in-house photoshoots for brand campaigns. Developed a vision for the look and feel based on the campaign brief, organized objects needed for photoshoot, assembled and art directed objects at photoshoot, and edited photography. 
 			</div>
 		</div>
 </div>
@@ -50,7 +50,11 @@
 				</a>
 			</div>
 		</div>
-		<div class="col-1-1">
+	</div>
+</div>
+
+<div class="grid manipulation">
+	<div class="col-1-1">
 			<div class="project1">
 				<a href="img/DigitalPrizePack_Email_560x350.gif">
 				<img src="img/DigitalPrizePack_Email_560x350.gif">
