--- a/advertising.html
+++ b/advertising.html
@@ -35,8 +35,8 @@
 <div class="grid head">
 		<div class="col-1-1">
 			<div class="projectdescription">
-				<h2>PROSPECTING & REMARKETING DISPLAY | PRINT ADS | FACEBOOK ADS | AFFILIATE ADS</h2>
-				<h1>Marketing Collateral and Advertising</h1>
+				<h2>CAMPAIGNS | DISPLAY ADS | SOCIAL MEDIA </h2>
+				<h1>Marketing/Advertising Collateral</h1>
 				<p></p>
 			</div>
 		</div>
@@ -68,7 +68,7 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<p>Interested in testing niche content, I created a parody graphic around voting based off of Drake's 'If You're Reading This It's Too Late' album art. This was posted on social media mid-term election day.
+				<p>Interested in testing niche content, I created a parody graphic around voting based off of Drake's 'If You're Reading This It's Too Late' album art. This was posted on social media mid-term election day. <a href="https://www.instagram.com/p/Bp2Dub1BpXa/" target="_blank"><u>View the live post here.</u></a>
 			</div>
 		</div>
 		<div class="col-2-3">
@@ -85,7 +85,20 @@
 				<br><br>
 				<b>The Concept: Wear a New Hat for Your Future in Tech</b> Start fresh with a brand new career in tech, or try your hand at today’s most relevant skills: coding, data, design, marketing, and product development.
 				<br><br>
-				<b>The Design:</b> Visually related trying out a topic of interest to the concept of trying on a new hat, 'stepping into someone else's shoes.'
+				<b>The Design:</b> Visually related trying out a topic of interest to the concept of trying on a new hat, 'stepping into someone else's shoes.' <a href="https://www.instagram.com/p/Bbj5PyAl5V4/" target="_blank"><u>View the live Instagram post here.</u></a>
+			</div>
+		</div>
+		<div class="col-2-3">
+			<div class="project1">
+				<a href="img/LetsGetDigital.gif" target="_blank">
+				<img src="img/LetsGetDigital.gif">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<p>
+				Proposed direction for a campaign around taking $500 off a 1-week course, either on-campus or remote format, during the summer. Created a visual parody between the speed and intensity of leveling up your career with a skill-set learned in 1 week to an 80s themed workout class.
 			</div>
 		</div>
 	</div>
@@ -138,30 +151,6 @@
 
 <br><br>
 
-<div class="grid manipulation">
-	<div class="col-2-3">
-		<div class="col-1-1">
-			<div class="project1">
-				<a href="img/BlackFriday_SocialMedia_instagram.gif"> 
-				<img src="img/BlackFriday_SocialMedia_instagram.gif" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-1">
-			<div class="project1">
-				<a href="img/BlackFriday_SocialMedia_Instagram2.gif"> 
-				<img src="img/BlackFriday_SocialMedia_Instagram2.gif" target="_blank">
-			</div>
-		</div>
-
-	</div>
-	<div class="col-1-3">
-		<div class="project1">
-			<p><b>Black Friday Sale </b> Developed mystery sale creative around a 50% off offering for short-form courses. </p>
-			</a>
-		</div>
-	</div>
-</div>
 
 
 <div class="grid head">
@@ -174,6 +163,7 @@
 
 <!-- three collumns and 2 rows -->
 
+<!-- row 1 -->
 <div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project1">
@@ -187,7 +177,7 @@
 			</div>
 		</div>
 		<div class="col-1-3">
-			<div class="project2">
+			<div class="project1">
 				<a class="overlay" href="sweepstakes.html">
 				  <div class="overlay-text">
 					<h1>Studio Photography and Art Direction</h1>
@@ -198,11 +188,11 @@
 			</div>
 		</div>
 		<div class="col-1-3">
-			<div class="project3">
+			<div class="project1">
 				<a class="overlay" href="advertising.html">
 				  <div class="overlay-text">
-				  	<h1>Marketing Collateral and Advertising</h1>
-					<h2>BANNER ADS | PRINT ADS | FACEBOOK ADS </h2>
+				  	<h1>Marketing and Advertising Collateral</h1>
+					<h2>CAMPAIGNS | DISPLAY ADS | SOCIAL MEDIA </h2>
 				  	</div>
 				</a>
 				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
@@ -210,9 +200,10 @@
 		</div>
 </div>
 
+<!-- row 2 -->
 <div class="grid threecolumn">
 		<div class="col-1-3">
-			<div class="project4">
+			<div class="project1">
 				<a class="overlay" href="mediakit.html">
 				  <div class="overlay-text">
 				  	<h1>Fine Cooking Media Kit</h1>
@@ -223,18 +214,18 @@
 			</div>
 		</div>
 		<div class="col-1-3">
-			<div class="project5">
-				<a class="overlay" href="photomanipulation.html">
+			<div class="project1">
+				<a class="overlay" href="7dayskillcast.html">
 				  <div class="overlay-text">
-				  	<h1>Personal Projects</h1>
-					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
+				  	<h1>7-Day Skillcast Marketing Campaign</h1>
+					<h2>CAMPAIGN | SALE | VISUAL NARRATIVE</h2>
 				  	</div>
 				</a>
-				<img src="img/project5_homepage.png" title="Photo Manipulations">
+				<img src="img/skillcast_homepage.jpg" title="7-Day Skillcast">
 			</div>
 		</div>
 		<div class="col-1-3">
-			<div class="project6">
+			<div class="project1">
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
 				  	<h1>See Her Excel Scholarship</h1>
@@ -242,6 +233,43 @@
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Branding">
+			</div>
+		</div>
+</div>
+
+<!-- row 3 -->
+<div class="grid threecolumn">
+		<div class="col-1-3">
+			<div class="project1">
+				<a class="overlay" href="cluckbigotry.html">
+				  <div class="overlay-text">
+				  	<h1>Cluck Bigotry</h1>
+					<h2>EVENT | FUNDRAISER</h2>
+				  	</div>
+				</a>
+				<img src="img/project7_homepage.jpg" title="Fine Cooking Media Kit">
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+<!-- 				<a class="overlay" href="printandbrand.html">
+				  <div class="overlay-text">
+				  	<h1>Work In Progress</h1>
+					<h2></h2>
+				  	</div>
+				</a> -->
+				<img src="img/workinprogress.jpg" title="Branding">
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<a class="overlay" href="photomanipulation.html">
+				  <div class="overlay-text">
+				  	<h1>Personal Projects</h1>
+					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
+				  	</div>
+				</a>
+				<img src="img/project5_homepage.png" title="Photo Manipulations">
 			</div>
 		</div>
 </div>
