--- a/emaildesigns.html
+++ b/emaildesigns.html
@@ -51,13 +51,16 @@
 	<img src="img/Email_2.png">
 	<img src="img/Email_3.png">
 	<img src="img/Email_4.png">
+	<center><a href="https://www.instagram.com/p/Br55SN3BumA/" target="_blank"><u>View the version created for instagram here.</u></a></center><br><br><br>
 </div>
 
 <br>
 
 
+
 <!-- three collumns and 2 rows -->
 
+<!-- row 1 -->
 <div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project1">
@@ -71,7 +74,7 @@
 			</div>
 		</div>
 		<div class="col-1-3">
-			<div class="project2">
+			<div class="project1">
 				<a class="overlay" href="sweepstakes.html">
 				  <div class="overlay-text">
 					<h1>Studio Photography and Art Direction</h1>
@@ -82,11 +85,11 @@
 			</div>
 		</div>
 		<div class="col-1-3">
-			<div class="project3">
+			<div class="project1">
 				<a class="overlay" href="advertising.html">
 				  <div class="overlay-text">
-				  	<h1>Marketing Collateral and Advertising</h1>
-					<h2>BANNER ADS | PRINT ADS | FACEBOOK ADS </h2>
+				  	<h1>Marketing and Advertising Collateral</h1>
+					<h2>CAMPAIGNS | DISPLAY ADS | SOCIAL MEDIA </h2>
 				  	</div>
 				</a>
 				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
@@ -94,9 +97,10 @@
 		</div>
 </div>
 
+<!-- row 2 -->
 <div class="grid threecolumn">
 		<div class="col-1-3">
-			<div class="project4">
+			<div class="project1">
 				<a class="overlay" href="mediakit.html">
 				  <div class="overlay-text">
 				  	<h1>Fine Cooking Media Kit</h1>
@@ -107,18 +111,18 @@
 			</div>
 		</div>
 		<div class="col-1-3">
-			<div class="project5">
-				<a class="overlay" href="photomanipulation.html">
+			<div class="project1">
+				<a class="overlay" href="7dayskillcast.html">
 				  <div class="overlay-text">
-				  	<h1>Personal Projects</h1>
-					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
+				  	<h1>7-Day Skillcast Marketing Campaign</h1>
+					<h2>CAMPAIGN | SALE | VISUAL NARRATIVE</h2>
 				  	</div>
 				</a>
-				<img src="img/project5_homepage.png" title="Photo Manipulations">
+				<img src="img/skillcast_homepage.jpg" title="7-Day Skillcast">
 			</div>
 		</div>
 		<div class="col-1-3">
-			<div class="project6">
+			<div class="project1">
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
 				  	<h1>See Her Excel Scholarship</h1>
@@ -126,6 +130,43 @@
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Branding">
+			</div>
+		</div>
+</div>
+
+<!-- row 3 -->
+<div class="grid threecolumn">
+		<div class="col-1-3">
+			<div class="project1">
+				<a class="overlay" href="cluckbigotry.html">
+				  <div class="overlay-text">
+				  	<h1>Cluck Bigotry</h1>
+					<h2>EVENT | FUNDRAISER</h2>
+				  	</div>
+				</a>
+				<img src="img/project7_homepage.jpg" title="Fine Cooking Media Kit">
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+<!-- 				<a class="overlay" href="printandbrand.html">
+				  <div class="overlay-text">
+				  	<h1>Work In Progress</h1>
+					<h2></h2>
+				  	</div>
+				</a> -->
+				<img src="img/workinprogress.jpg" title="Branding">
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<a class="overlay" href="photomanipulation.html">
+				  <div class="overlay-text">
+				  	<h1>Personal Projects</h1>
+					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
+				  	</div>
+				</a>
+				<img src="img/project5_homepage.png" title="Photo Manipulations">
 			</div>
 		</div>
 </div>
