--- a/photomanipulation.html
+++ b/photomanipulation.html
@@ -156,6 +156,7 @@
 
 <!-- three collumns and 2 rows -->
 
+<!-- row 1 -->
 <div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project1">
@@ -169,7 +170,7 @@
 			</div>
 		</div>
 		<div class="col-1-3">
-			<div class="project2">
+			<div class="project1">
 				<a class="overlay" href="sweepstakes.html">
 				  <div class="overlay-text">
 					<h1>Studio Photography and Art Direction</h1>
@@ -180,11 +181,11 @@
 			</div>
 		</div>
 		<div class="col-1-3">
-			<div class="project3">
+			<div class="project1">
 				<a class="overlay" href="advertising.html">
 				  <div class="overlay-text">
-				  	<h1>Marketing Collateral and Advertising</h1>
-					<h2>BANNER ADS | PRINT ADS | FACEBOOK ADS </h2>
+				  	<h1>Marketing and Advertising Collateral</h1>
+					<h2>CAMPAIGNS | DISPLAY ADS | SOCIAL MEDIA </h2>
 				  	</div>
 				</a>
 				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
@@ -192,9 +193,10 @@
 		</div>
 </div>
 
+<!-- row 2 -->
 <div class="grid threecolumn">
 		<div class="col-1-3">
-			<div class="project4">
+			<div class="project1">
 				<a class="overlay" href="mediakit.html">
 				  <div class="overlay-text">
 				  	<h1>Fine Cooking Media Kit</h1>
@@ -205,18 +207,18 @@
 			</div>
 		</div>
 		<div class="col-1-3">
-			<div class="project5">
-				<a class="overlay" href="photomanipulation.html">
+			<div class="project1">
+				<a class="overlay" href="7dayskillcast.html">
 				  <div class="overlay-text">
-				  	<h1>Personal Projects</h1>
-					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
+				  	<h1>7-Day Skillcast Marketing Campaign</h1>
+					<h2>CAMPAIGN | SALE | VISUAL NARRATIVE</h2>
 				  	</div>
 				</a>
-				<img src="img/project5_homepage.png" title="Photo Manipulations">
+				<img src="img/skillcast_homepage.jpg" title="7-Day Skillcast">
 			</div>
 		</div>
 		<div class="col-1-3">
-			<div class="project6">
+			<div class="project1">
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
 				  	<h1>See Her Excel Scholarship</h1>
@@ -224,6 +226,43 @@
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Branding">
+			</div>
+		</div>
+</div>
+
+<!-- row 3 -->
+<div class="grid threecolumn">
+		<div class="col-1-3">
+			<div class="project1">
+				<a class="overlay" href="cluckbigotry.html">
+				  <div class="overlay-text">
+				  	<h1>Cluck Bigotry</h1>
+					<h2>EVENT | FUNDRAISER</h2>
+				  	</div>
+				</a>
+				<img src="img/project7_homepage.jpg" title="Fine Cooking Media Kit">
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+<!-- 				<a class="overlay" href="printandbrand.html">
+				  <div class="overlay-text">
+				  	<h1>Work In Progress</h1>
+					<h2></h2>
+				  	</div>
+				</a> -->
+				<img src="img/workinprogress.jpg" title="Branding">
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<a class="overlay" href="photomanipulation.html">
+				  <div class="overlay-text">
+				  	<h1>Personal Projects</h1>
+					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
+				  	</div>
+				</a>
+				<img src="img/project5_homepage.png" title="Photo Manipulations">
 			</div>
 		</div>
 </div>
