--- a/cluckbigotry.html
+++ b/cluckbigotry.html
@@ -171,13 +171,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-<!-- 				<a class="overlay" href="printandbrand.html">
+				<a class="overlay" href="section8.html">
 				  <div class="overlay-text">
-				  	<h1>Work In Progress</h1>
-					<h2></h2>
+				  	<h1>Remote Learning Campaign</h1>
+					<h2>CAMPAIGN | VIDEO</h2>
 				  	</div>
-				</a> -->
-				<img src="img/workinprogress.jpg" title="Branding">
+				</a>
+				<img src="img/project8_homepage.jpg" title="Branding">
 			</div>
 		</div>
 		<div class="col-1-3">
