--- a/photomanipulation.html
+++ b/photomanipulation.html
@@ -54,7 +54,7 @@
 	</div>
 </div>
 
-<div class="grid manipulation">
+<!-- <div class="grid manipulation">
 	<div class="col-1-1">
 		<div class="col-1-2">
 			<div class="project1">
@@ -148,7 +148,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 
 <br><br>
 
@@ -245,13 +245,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-<!-- 				<a class="overlay" href="printandbrand.html">
+				<a class="overlay" href="section8.html">
 				  <div class="overlay-text">
-				  	<h1>Work In Progress</h1>
-					<h2></h2>
+				  	<h1>Remote Learning Campaign</h1>
+					<h2>CAMPAIGN | VIDEO</h2>
 				  	</div>
-				</a> -->
-				<img src="img/workinprogress.jpg" title="Branding">
+				</a>
+				<img src="img/project8_homepage.jpg" title="Branding">
 			</div>
 		</div>
 		<div class="col-1-3">
