--- a/photomanipulation.html
+++ b/photomanipulation.html
@@ -54,7 +54,7 @@
 	</div>
 </div>
 
-<!-- <div class="grid manipulation">
+<div class="grid manipulation">
 	<div class="col-1-1">
 		<div class="col-1-2">
 			<div class="project1">
@@ -148,7 +148,7 @@
 			</div>
 		</div>
 	</div>
-</div> -->
+</div>
 
 <br><br>
 
