--- a/7dayskillcast.html
+++ b/7dayskillcast.html
@@ -32,7 +32,7 @@
 <div class="grid header1">
 	<div class="col-1-1">
 		<div class="projectdescription">
-			<h2>CAMPAIGN | SALE | VISUAL NARRATIVE</h2>
+			<h2>WELCOME WELCOME WELCOME</h2>
 			<h1>7-Day Skillcast Marketing Campaign</h1>
 			<p><b>The Request:</b> Create a visual narrative around taking $500 off a 1-week course, either on-campus or remote format, during the summer.
 			<br><br>
