--- a/section8.html
+++ b/section8.html
@@ -15,8 +15,8 @@
 
 <div class ="grid head">
 	<div class="col-1-1">
-		<a class="logo" href="index.html"><h1>AMANDA JENNINGS</h1></a>
-		<a class="hamburger" href="aboutme.html"><h2>ABOUT ME</h2></a>
+		<a class="logo" href="index.html"><h1>Amanda Jennings</h1></a>
+		<a class="hamburger" href="aboutme.html"><h2>About</h2></a>
 	</div>
 </div>
 
@@ -40,7 +40,7 @@
 			<br><br>
 			The narrative acknowledges the busy lifestyles of students and how full-time online course formats help accommodate them, highlights online learning without detracting from the on-campus experience, and is evergreen, with both top- and bottom-of-funnel use.
 			<br><br>
-			<b>The Visuals:</b> This campaign was developed amoungst a team of designers, copywriters, videographers, an illustrators, and an animator. My roles throughout the video's creative process included: concept creation, visual development, casting selection, wardrobe selection, art direction throughout the video shoot, video QA, and marketing asset support creation.
+			<b>The Visuals:</b> This campaign was developed amoungst a team of designers, copywriters, videographers, an illustrator, and an animator. My roles throughout the video's production included: concept creation, visual development, casting selection, wardrobe selection, art direction through-out the shoot, video QA, and marketing asset support creation.
 
 			</p>
 		</div>
@@ -171,13 +171,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="photomanipulation.html">
+				<a class="overlay" href="section9.html">
 				  <div class="overlay-text">
-				  	<h1>Personal Projects</h1>
-					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
+				  	<h1>Hook & Blade</h1>
+					<h2>Brand Identity</h2>
 				  	</div>
 				</a>
-				<img src="img/project5_homepage.png" title="Photo Manipulations">
+				<img src="img/HookandBlade0.jpg" title="Hook&Blade">
 			</div>
 		</div>
 </div>
