--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <div class ="grid head">
 	<div class="col-1-1">
-		<a class="logo" href="index.html"><h1>AMANDA JENNINGS</h1></a>
-		<a class="hamburger" href="aboutme.html"><h2>ABOUT ME</h2></a>
+		<a class="logo" href="index.html"><h1>Amanda Jennings</h1></a>
+		<a class="hamburger" href="aboutme.html"><h2>About</h2></a>
 	</div>
 </div>
 
@@ -127,13 +127,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="photomanipulation.html">
+				<a class="overlay" href="section9.html">
 				  <div class="overlay-text">
-				  	<h1>Personal Projects</h1>
-					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
+				  	<h1>Hook & Blade</h1>
+					<h2>Brand Identity</h2>
 				  	</div>
 				</a>
-				<img src="img/project5_homepage.png" title="Photo Manipulations">
+				<img src="img/HookandBlade0.jpg" title="Hook&Blade">
 			</div>
 		</div>
 </div>
