--- a/section9.html
+++ b/section9.html
@@ -15,8 +15,8 @@
 
 <div class ="grid head">
 	<div class="col-1-1">
-		<a class="logo" href="index.html"><h1>AMANDA JENNINGS</h1></a>
-		<a class="hamburger" href="aboutme.html"><h2>ABOUT ME</h2></a>
+		<a class="logo" href="index.html"><h1>Amanda Jennings</h1></a>
+		<a class="hamburger" href="aboutme.html"><h2>About</h2></a>
 	</div>
 </div>
 
@@ -30,15 +30,15 @@
 	</div>
 </div>
 
-<div class="grid header">
+<!-- <div class="grid header">
 	<div class="col-1-1">
 		<div class="projectdescription">
-			<h2>PHOTO EDITING | PERSONAL PROJECTS</h2>
-			<h1>Personal Projects</h1>
-			<p>Various projects I've developed in purpose of creative exploration and discovery. </p>
+			<h2>Brand Identity</h2>
+			<h1>Hook & Blade</h1>
+			<p>Share what you worked on here</p>
 		</div>
 	</div>
-</div>
+</div> -->
 
 
 
@@ -46,14 +46,16 @@
 	<div class="col-1-1">
 		<div class="col-1-1">
 			<div class="project1">
-				<a href="img/BlindContourSeries_FrenchieLady.png"> 
-				<img src="img/BlindContourSeries_FrenchieLady.png" target="_blank">
+				<img src="img/HookandBlade1.jpg" target="_blank">
+				<img src="img/HookandBlade2.jpg" target="_blank">
+				<img src="img/HookandBlade3.jpg" target="_blank">
+				<img src="img/HookandBlade4.jpg" target="_blank">
 				</a>
 			</div>
 		</div>
 	</div>
 </div>
-
+<!-- 
 <div class="grid manipulation">
 	<div class="col-1-1">
 		<div class="col-1-2">
@@ -96,7 +98,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> --><!-- 
 
 <br><br><br>
 
@@ -150,7 +152,7 @@
 	</div>
 </div>
 
-<br><br>
+<br><br> -->
 
 
 
@@ -256,13 +258,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="photomanipulation.html">
+				<a class="overlay" href="section9.html">
 				  <div class="overlay-text">
-				  	<h1>Personal Projects</h1>
-					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
+				  	<h1>Hook & Blade</h1>
+					<h2>Brand Identity</h2>
 				  	</div>
 				</a>
-				<img src="img/project5_homepage.png" title="Photo Manipulations">
+				<img src="img/HookandBlade0.jpg" title="Hook&Blade">
 			</div>
 		</div>
 </div>
