--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -15,8 +15,8 @@
 
 <div class ="grid head">
 	<div class="col-1-1">
-		<a class="logo" href="index.html"><h1>AMANDA JENNINGS</h1></a>
-		<a class="hamburger" href="aboutme.html"><h2>ABOUT ME</h2></a>
+		<a class="logo" href="index.html"><h1>Amanda Jennings</h1></a>
+		<a class="hamburger" href="aboutme.html"><h2>About</h2></a>
 	</div>
 </div>
 
