--- a/emaildesigns.html
+++ b/emaildesigns.html
@@ -166,7 +166,7 @@
 					<h2>Brand Identity</h2>
 				  	</div>
 				</a>
-				<img src="img/HookandBlade0.jpg" title="Hook&Blade">
+				<img src="img/index/section9.jpg" title="Hook&Blade">
 			</div>
 		</div>
 </div>
