--- a/section9.html
+++ b/section9.html
@@ -46,113 +46,21 @@
 	<div class="col-1-1">
 		<div class="col-1-1">
 			<div class="project1">
-				<img src="img/HookandBlade1.jpg" target="_blank">
-				<img src="img/HookandBlade2.jpg" target="_blank">
-				<img src="img/HookandBlade3.jpg" target="_blank">
-				<img src="img/HookandBlade4.jpg" target="_blank">
+				<img src="img/section9/HookandBlade_1.jpg" target="_blank">
+				<br><br><br><br>
+				<img src="img/section9/HookandBlade_2.jpg" target="_blank">
+				<br><br><br><br>
+				<img src="img/section9/HookandBlade_3.jpg" target="_blank">
+				<br><br><br><br>
+				<img src="img/section9/HookandBlade_4.jpg" target="_blank">
+				<br><br><br><br>
+				<img src="img/section9/HookandBlade_5.jpg" target="_blank">
+				<br><br><br><br>
 				</a>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- 
-<div class="grid manipulation">
-	<div class="col-1-1">
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/photomanipulations/chel.jpg"> 
-				<img src="img/photomanipulations/chel.jpg" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/photomanipulations/brad.jpg"> 
-				<img src="img/photomanipulations/brad.jpg" target="_blank">
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/photomanipulations/maria.jpg"> 
-				<img src="img/photomanipulations/maria.jpg" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/photomanipulations/linds.jpg"> 
-				<img src="img/photomanipulations/linds.jpg" target="_blank">
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/photomanipulations/sara.jpg"> 
-				<img src="img/photomanipulations/sara.jpg" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/photomanipulations/peter.jpg"> 
-				<img src="img/photomanipulations/peter.jpg" target="_blank">
-			</div>
-		</div>
-	</div>
-</div> --><!-- 
-
-<br><br><br>
-
-<div class="grid manipulation">
-	<div class="col-1-1">
-		<div class="col-2-3">
-			<div class="project1">
-				<a href="img/photomanipulations/twin1.jpg"> 
-				<img src="img/photomanipulations/twin1.jpg" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-3">
-			<div class="project1">
-				<p><b>Changing the Past: Twins</b> A series of photos from my childhood that I've scanned and manipulated to appear as if I had a twin sister. </p>
-				</a>
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/photomanipulations/twin2.jpg"> 
-				<img src="img/photomanipulations/twin2.jpg" target="_blank">
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/photomanipulations/twin3.jpg"> 
-				<img src="img/photomanipulations/twin3.jpg" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-1">
-			<div class="project1">
-				<a href="img/photomanipulations/twin6.jpg"> 
-				<img src="img/photomanipulations/twin6.jpg" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/photomanipulations/twin5.jpg"> 
-				<img src="img/photomanipulations/twin5.jpg" target="_blank">
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/photomanipulations/twin4.jpg"> 
-				<img src="img/photomanipulations/twin4.jpg" target="_blank">
-			</div>
-		</div>
-	</div>
-</div>
-
-<br><br> -->
 
 
 
@@ -264,7 +172,7 @@
 					<h2>Brand Identity</h2>
 				  	</div>
 				</a>
-				<img src="img/HookandBlade0.jpg" title="Hook&Blade">
+				<img src="img/index/section9.jpg" title="Hook&Blade">
 			</div>
 		</div>
 </div>
