--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -170,13 +170,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="photomanipulation.html">
+				<a class="overlay" href="section9.html">
 				  <div class="overlay-text">
-				  	<h1>Personal Projects</h1>
-					<h2>BLIND CONTOUR ILLUSTRATION | PHOTO MANIPULATION</h2>
+				  	<h1>Hook & Blade</h1>
+					<h2>Brand Identity</h2>
 				  	</div>
 				</a>
-				<img src="img/project5_homepage.png" title="Photo Manipulations">
+				<img src="img/index/section9.jpg" title="Hook&Blade">
 			</div>
 		</div>
 </div>
