--- a/cluckbigotry.html
+++ b/cluckbigotry.html
@@ -29,7 +29,7 @@
 		</div>
 </div>
 
-<div class="grid header1">
+<!-- <div class="grid header1">
 	<div class="col-1-1">
 		<div class="projectdescription">
 			<h2>EVENT | FUNDRAISER</h2>
@@ -42,36 +42,17 @@
 			</p>
 		</div>
 	</div>
-</div>
+</div> -->
 
 <div class="grid manipulation">
 	<div class="col-1-1">
 		<div class="col-1-1">
 			<div class="project1">
-				<a href="img/CluckBigotry_Sketches.jpg" target="_blank"> 
-				<img src="img/CluckBigotry_Sketches.jpg"> </a>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="grid manipulation">
-	<div class="col-1-1">
-		<div class="col-1-1">
-			<div class="project1">
-				<a href="img/CluckBigotry_postermockup.jpg" target="_blank"> 
-				<img src="img/CluckBigotry_postermockup.jpg"> </a>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="grid manipulation">
-	<div class="col-1-1">
-		<div class="col-1-1">
-			<div class="project1">
-				<a href="img/QueerChicken_CluckBigotry.jpg" target="_blank"> 
-				<img src="img/QueerChicken_CluckBigotry.jpg"> </a>
+				<img src="img/section7/stateofskills2.jpg" target="_blank">
+				<br><br>
+				<img src="img/section7/stateofskills3.jpg" target="_blank">
+				<br><br><br><br>
+				</a>
 			</div>
 		</div>
 	</div>
