--- a/emaildesigns.html
+++ b/emaildesigns.html
@@ -138,13 +138,13 @@
 <div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="cluckbigotry.html">
+				<a class="overlay" href="section7.html">
 				  <div class="overlay-text">
-				  	<h1>Cluck Bigotry</h1>
-					<h2>EVENT | FUNDRAISER</h2>
+				  	<h1>State of Skills</h1>
+					<h2>B2B Whitepaper Report</h2>
 				  	</div>
 				</a>
-				<img src="img/project7_homepage.jpg" title="Fine Cooking Media Kit">
+				<img src="img/index/section7.jpg" title="Fine Cooking Media Kit">
 			</div>
 		</div>
 		<div class="col-1-3">
