--- a/section7.html
+++ b/section7.html
@@ -21,14 +21,37 @@
 </div>
 
 
+<div class="grid header">
+		<div class="col-1-1">
+			<div class="project6header">
+<!-- 				<img src="img/project6_bodyheader.png"> -->
+			</div>
+		</div>
+</div>
+
+<!-- <div class="grid header1">
+	<div class="col-1-1">
+		<div class="projectdescription">
+			<h2>EVENT | FUNDRAISER</h2>
+			<h1>Cluck Bigotry</h1>
+			<p><b>The Request:</b> To create a poster and visual narrative for a fried-chicken making fundraiser during pride month. Why fried chicken, you ask? You may be familiar with the negative impact Chick-fil-a has on the LGBTQA+ community, and we've all heard "...but the sandwiches are so good..." At this fundraiser, their recipe has been knocked off AND the proceeds go to a good cause, benefiting LGBTQA+ youth.
+			<br><br>
+			<b>The Process:</b> I paired with a project manager and copywriter to brainstorm concepts. We determined what elements needed to be on the poster (i.e. the who, what, when, where, whys) and developed the tone we would like to convey through copy/visuals.
+			<br><br>
+			<b>The Visuals:</b> I approached designing the poster with highlighing the pride colored buns of the chicken chicken sandwich to be the main focus, surrounded by minimalistic black on white palette. Emphasizing that while Chik-fil-a drives a negative impact, the community comes together to continue to provide support towards the LGBTQA+ community.
+			</p>
+		</div>
+	</div>
+</div> -->
 
 <div class="grid manipulation">
 	<div class="col-1-1">
 		<div class="col-1-1">
 			<div class="project1">
-				<br>
-				<img src="img/section5/hitplay.jpg" target="_blank">
+				<img src="img/section7/stateofskills2.jpg" target="_blank">
 				<br><br>
+				<img src="img/section7/stateofskills3.jpg" target="_blank">
+				<br><br><br><br>
 				</a>
 			</div>
 		</div>
@@ -36,9 +59,6 @@
 </div>
 
 
-
-
-<br><br><Br>
 
 
 <!-- three collumns and 2 rows -->
@@ -153,7 +173,6 @@
 			</div>
 		</div>
 </div>
-
 
 
 
