--- a/index.html
+++ b/index.html
@@ -68,20 +68,20 @@
 <div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="mediakit.html">
+				<a class="overlay" href="section4.html">
 				  <div class="overlay-text">
-				  	<h1>Fine Cooking Media Kit</h1>
-					<h2>ADVERTISING | PUBLIC RELATIONS</h2>
+				  	<h1>Weeping Acoustics Guitar Loop Kit Covers</h1>
+					<h2>Digital Collage</h2>
 				  	</div>
 				</a>
-				<img src="img/project4_homepage.png" title="Fine Cooking Media Kit">
+				<img src="img/index/section4.jpg" title="Fine Cooking Media Kit">
 			</div>
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
 				<a class="overlay" href="section5.html">
 				  <div class="overlay-text">
-				  	<h1>Hit Play Micro Site - Marketing Campaign</h1>
+				  	<h1>Hit Play Marketing Campaign Micro Site</h1>
 					<h2>UI Design</h2>
 				  	</div>
 				</a>
@@ -108,7 +108,7 @@
 				<a class="overlay" href="section7.html">
 				  <div class="overlay-text">
 				  	<h1>State of Skills</h1>
-					<h2>B2B Whitepaper Report</h2>
+					<h2>B2B Whitepaper Report and Infographic</h2>
 				  	</div>
 				</a>
 				<img src="img/index/section7.jpg" title="Fine Cooking Media Kit">
@@ -118,8 +118,8 @@
 			<div class="project1">
 				<a class="overlay" href="section8.html">
 				  <div class="overlay-text">
-				  	<h1>Remote Learning Campaign</h1>
-					<h2>CAMPAIGN | VIDEO</h2>
+				  	<h1>Immersive Remote Learning</h1>
+					<h2>Video Campaign</h2>
 				  	</div>
 				</a>
 				<img src="img/project8_homepage.jpg" title="Branding">
@@ -142,23 +142,22 @@
 
 
 <!-- footer -->
-<br><br>
 <div class="grid threecolumn">
-<hr>
+
 		<div class="col-1-3">
 			<div class="getincontact">
-				<h2>GET IN CONTACT</h2>
-				<a href="mailto:jenningsab@icloud.com" width="350" height="264">Email</a>
-				<br>
+				<h2>Contact</h2>
 				<a href="ajennings_resume.pdf" target="_blank">Resume</a>
+				<br>
+				<a href="mailto:jenningsab@icloud.com" width="350" height="264">Email</a>
 			</div>
 		</div>
 		<div class="col-1-3">
 			<div class="socialize">
-				<h2>SOCIALIZE</h2>
-				<a href="https://www.instagram.com/plumwhine/" target="_blank">Instagram</a>
-				<br>
+				<h2>Social</h2>
 				<a href="https://www.linkedin.com/in/jenningsab/" target="_blank">Linkedin</a>
+				<br>
+				<a href="https://www.instagram.com/plumwhine/" target="_blank">Instagram</a>
 			</div>
 		</div>
 		<div class="col-1-3">
