--- a/aboutme.html
+++ b/aboutme.html
@@ -50,27 +50,26 @@
 
 
 <!-- footer -->
-<br><br>
+<br><br><br><br><br>
 <div class="grid threecolumn">
-<hr>
+
 		<div class="col-1-3">
 			<div class="getincontact">
-				<h2>GET IN CONTACT</h2>
-				<a href="mailto:jenningsab@icloud.com" width="350" height="264">Email</a>
-				<br>
+				<h2>Contact</h2>
 				<a href="ajennings_resume.pdf" target="_blank">Resume</a>
+				<br>
+				<a href="mailto:jenningsab@icloud.com" width="350" height="264">Email</a>
 			</div>
 		</div>
 		<div class="col-1-3">
 			<div class="socialize">
-				<h2>SOCIALIZE</h2>
-				<a href="https://www.instagram.com/plumwhine/" target="_blank">Instagram</a>
-				<br>
+				<h2>Social</h2>
 				<a href="https://www.linkedin.com/in/jenningsab/" target="_blank">Linkedin</a>
+				<br>
+				<a href="https://www.instagram.com/plumwhine/" target="_blank">Instagram</a>
 			</div>
 		</div>
-		<div class="col-1-3">
-				
+		<div class="col-1-3">		
 		</div>
 </div> 
 <script>
