--- a/printandbrand.html
+++ b/printandbrand.html
@@ -16,7 +16,7 @@
 <div class ="grid head">
 	<div class="col-1-1">
 		<a class="logo" href="index.html"><h1>Amanda Jennings</h1></a>
-		<a class="hamburger" href="aboutme.html"><h2>About</h2></a>
+		<a class="hamburger" href="aboutme.html"><h2><mark>About</mark></h2></a>
 	</div>
 </div>
 
@@ -258,12 +258,12 @@
 
 
 
-<!-- footer -->
+<!-- !-- footer --> 
 <div class="grid threecolumn">
 
 		<div class="col-1-3">
 			<div class="getincontact">
-				<h2>Contact</h2>
+				<h2><mark>Contact</mark></h2>
 				<a href="ajennings_resume.pdf" target="_blank">Resume</a>
 				<br>
 				<a href="mailto:jenningsab@icloud.com" width="350" height="264">Email</a>
@@ -271,7 +271,7 @@
 		</div>
 		<div class="col-1-3">
 			<div class="socialize">
-				<h2>Social</h2>
+				<h2><mark>Social</mark></h2>
 				<a href="https://www.linkedin.com/in/jenningsab/" target="_blank">Linkedin</a>
 				<br>
 				<a href="https://www.instagram.com/plumwhine/" target="_blank">Instagram</a>
