--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
 <div class ="grid head">
 	<div class="col-1-1">
 		<a class="logo" href="index.html"><h1>Amanda Jennings</h1></a>
-		<a class="hamburger" href="aboutme.html"><h2>About</h2></a>
+		<a class="hamburger" href="aboutme.html"><h2><mark>About</mark></h2></a>
 	</div>
 </div>
 
@@ -31,16 +31,10 @@
 		</div>
 	</div>
 	<div class="col-2-3">
-		<p><b><bR>Amanda Jennings </b> is a graphic designer passionate about visual communication based in Brooklyn, NY. Originally from Connecticut, she studied Graphic Design and graduated cum laude from Southern Connecticut State University. She has continued her education studying front-end web development and user experience design at General Assembly. 
-		<br><br>
-		Amanda's interests include iced coffee year-round, wearing layers, being an ebay enthusiast, finding the best bang for her buck, discovering the best food in the city, drinking sour beers, and staying inside with her French Bulldog, Lady. Check out what Lady has been up to on <a href="https://www.instagram.com/misslady.thefrenchie/?hl=en" target="_blank"><u>her instagram</u></a>.
-		<br><br>
-		Amanda has attention to detail, strong work ethic, and a sense of humor. 
+		<h3>Amanda is multidisiciplinary designer with over half a decade developing holistic design solutions across a range of challenges. Originally from Connecticut, she now resides in Brooklyn, NY.</h3>
 		<br>
-		She also coded this website! Check out her <a href="https://github.com/ajennings19" target="_blank"><u>her github</u></a>. </p>
-		
-		<a href="mailto:jenningsab@icloud.com" width="350" height="264"><u>Reach out to Amanda</u></a>
-				<br>
+		<b>Talk to her about:</b> French Bulldogs, good food, biking, shuffleboard, TikTok, and drinking iced coffee year round.
+		<br><br>
 	</div>
 </div>
 
@@ -48,14 +42,13 @@
 
 
 
-
+<br><br><br><br>
 <!-- footer -->
-<br><br><br><br><br>
 <div class="grid threecolumn">
 
 		<div class="col-1-3">
 			<div class="getincontact">
-				<h2>Contact</h2>
+				<h2><mark>Contact</mark></h2>
 				<a href="ajennings_resume.pdf" target="_blank">Resume</a>
 				<br>
 				<a href="mailto:jenningsab@icloud.com" width="350" height="264">Email</a>
@@ -63,7 +56,7 @@
 		</div>
 		<div class="col-1-3">
 			<div class="socialize">
-				<h2>Social</h2>
+				<h2><mark>Social</mark></h2>
 				<a href="https://www.linkedin.com/in/jenningsab/" target="_blank">Linkedin</a>
 				<br>
 				<a href="https://www.instagram.com/plumwhine/" target="_blank">Instagram</a>
