--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
 <div class ="grid head">
 	<div class="col-1-1">
 		<a class="logo" href="index.html"><h1>Amanda Jennings</h1></a>
-		<a class="hamburger" href="aboutme.html"><h2>About</h2></a>
+		<a class="hamburger" href="aboutme.html"><h2><mark>About</mark></h2></a>
 	</div>
 </div>
-
-
 
 
 
@@ -146,7 +144,7 @@
 
 		<div class="col-1-3">
 			<div class="getincontact">
-				<h2>Contact</h2>
+				<h2><mark>Contact</mark></h2>
 				<a href="ajennings_resume.pdf" target="_blank">Resume</a>
 				<br>
 				<a href="mailto:jenningsab@icloud.com" width="350" height="264">Email</a>
@@ -154,7 +152,7 @@
 		</div>
 		<div class="col-1-3">
 			<div class="socialize">
-				<h2>Social</h2>
+				<h2><mark>Social</mark></h2>
 				<a href="https://www.linkedin.com/in/jenningsab/" target="_blank">Linkedin</a>
 				<br>
 				<a href="https://www.instagram.com/plumwhine/" target="_blank">Instagram</a>
