--- a/aboutme.html
+++ b/aboutme.html
@@ -31,8 +31,8 @@
 		</div>
 	</div>
 	<div class="col-2-3">
-		<h3>Amanda is multidisciplinary designer with over half a decade developing holistic design solutions across a range of challenges. Originally from Connecticut, she now resides in Brooklyn, NY.</h3>
-		<p>She is a methodical creative who is process-oriented, resourceful, and organized.
+		<h3>Amanda is multidisciplinary designer with over half a decade developing holistic design solutions across a range of challenges.</h3>
+		<p>Originally from Connecticut, she now resides in Brooklyn, NY. She is a methodical creative who is process-oriented, resourceful, and organized.
 		<br><br>
 		<b>Talk to her about:</b> French Bulldogs, good food, biking, shuffleboard, TikTok, and drinking iced coffee year round.</p>
 		<br><br>
